--- a/package.json
+++ b/package.json
@@ -1,26 +1,59 @@
 {
-  "name": "next-crash-mastery",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.0.4"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.4"
-  }
+    "name": "next-crash-mastery",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev --turbopack",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "predev": "npm run typegen",
+        "prebuild": "npm run typegen",
+        "typegen": "sanity schema extract --path=./sanity/extract.json && sanity typegen generate"
+    },
+    "packageManager": "npm@10.5.2",
+    "overrides": {
+        "react": "$react",
+        "react-dom": "$react-dom",
+        "next": "$next"
+    },
+    "dependencies": {
+        "@radix-ui/react-avatar": "^1.1.2",
+        "@radix-ui/react-slot": "^1.1.0",
+        "@radix-ui/react-toast": "^1.2.4",
+        "@sanity/image-url": "^1.1.0",
+        "@sanity/vision": "^3.66.1",
+        "@sentry/nextjs": "^8.47.0",
+        "@tailwindcss/typography": "^0.5.15",
+        "@uiw/react-md-editor": "^4.0.5",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "easymde": "^2.18.0",
+        "lucide-react": "^0.468.0",
+        "markdown-it": "^14.1.0",
+        "next": "^15.1.1-canary.12",
+        "next-auth": "^5.0.0-beta.25",
+        "next-sanity": "^9.8.3-canary.1",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
+        "react-is": "^19.0.0",
+        "sanity": "^3.66.1",
+        "sanity-plugin-markdown": "^5.0.0",
+        "server-only": "^0.0.1",
+        "slugify": "^1.6.6",
+        "styled-components": "^6.1.13",
+        "tailwind-merge": "^2.5.5",
+        "tailwindcss-animate": "^1.0.7"
+    },
+    "devDependencies": {
+        "@types/markdown-it": "^14.1.2",
+        "@types/node": "^20",
+        "@types/react": "^19",
+        "@types/react-dom": "^19",
+        "eslint": "^9.17.0",
+        "eslint-config-next": "15.0.4",
+        "postcss": "^8",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5"
+    }
 }
